--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@avail-project/nexus-core": "^0.0.1",
     "@avail-project/nexus-widgets": "^0.0.5",
+    "@openzeppelin/contracts": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.4",
     "class-variance-authority": "^0.7.1",
@@ -24,16 +25,22 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-ethers": "^4.0.2",
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^3.0.1",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.18.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chai": "^6.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.7",
+    "mocha": "^11.7.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.0",
